2005-01-02  Per Bothner  <per@bothner.com>

	* formatst.scm: Add 4 tests for ~<...~:> (Logical Block).

2004-12-26  Per Bothner  <per@bothner.com>

	* included-1.scm: New file, to test include-relative.
	* Makefile.am (EXTRA_DIST): Update accordingly.
	* module1.scm (list0length-): Use include-relative

	* mac-test.scm: New test based on code by Andre van Tonder

2004-12-24  Per Bothner  <per@bothner.com>

	* mac-test.scm: New test, from Chez Scheme User's Guide.

2004-12-22  Per Bothner  <per@bothner.com>

	* mac-test.scm: Add new tests for double elipsis in template.

2004-12-07  Per Bothner  <per@bothner.com>

	* classes1.scm: Add test for define-namespace of a class.
	* classes2.scm: Test creating on non-static class.
	* obj-test.scm: Test creating of non-simple classes.

2004-12-02  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST): Add MyDate.java and MyTimestamp.java.
	Should have been added 05-12.

2004-11-08  Per Bothner  <per@bothner.com>

	* mac-test.scm: More macro pattern-matching tests.

	* mac-test.scm: A bunch of new tests.
	Test cases from Savannah bugs #9483 and #10561, which now work.

2004-10-23  Per Bothner  <per@bothner.com>

	* mac-test.scm: Add new test.

2004-08-05  Chris Dean  <ctdean@sokitomi.com>

	* classes1.scm (<SimpleA>):  Add mHappy field and isHappy/setHappy
	methods.
	* obj-test.scm:  Check for "isName" methods.

2004-08-10  Per Bothner  <per@bothner.com>

	* Makefile.am:  Adjust classpath for CGI tests, so we get
	servlet jar.

2004-08-07  Per Bothner  <per@bothner.com>

	* misc-test.scm:  Overload resolution test is now expected to pass.

2004-08-03  Per Bothner  <per@bothner.com>

	* module2.scm:  Make module extend <pair>, for extra testing.

	* testing.scm (test):  Add commented-out debugging hook.

2004-05-23  Per Bothner  <per@bothner.com>

	New testcase, based on Chris Dean's testcase for Savannah bug #8837.
	* classes1.scm (counter, get-new-count):  Move to the end, specifically
	after use in IdClass1.